solc_ossfuzz_seed_corpus/test_sol/test_14cd0c91df7cbcf9d336dce8cc8ffe3dd79619b8e953c4e34c81c02fbd07ec50_3b7ec277d6b534286d7a440a8218c91ad1b06727_sol.sol
==== Source:  ====

==== Source: su0.sol ====
type T0 is bool;
pragma solidity >= 0.0.0;
library L0 {
  error er0(function () internal   ep0);
  using L0 for *;
  function f0(bool i0) internal    returns(bool o0,T0 o1)
  {
  }
  function f1() external    returns(address payable o0,int240 o1,bool o2)
  {
    function (bool) internal   returns (int8, bytes memory, string memory) l0;
  }
}
contract C0 {
  using L0 for *;
  function f2(function (T0, bytes[1][] memory) internal   i0,function (function (int152, bool, T0) external   returns (bool), bool, bytes27) external   returns (address, address payable, int200) i1) private   
  {
    if ((false && true))
    {
      unchecked {
        payable(this).transfer(4283895939835623997);
        (bool l0) = payable(this).send(11647488215091629904);
        payable(this).transfer(18163196231467729500);
        (bool l1) = payable(this).send(3754957831089408362);
        payable(this).transfer(2881968441023377753);
        (bool l2, bytes memory l3) = payable(this).call{value: 15738951934601601502}("");
      }
    }
    (bool l4, bytes memory l5) = payable(this).call{value: 8714063746671436619}("");
    (bool l6, bytes memory l7) = payable(this).call{value: 15478615155757853014}("");
    payable(this).transfer(18085238955860124258);
  }
  using L0 for *;
  uint184   s0;
  bytes   s1 = bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff");
  mapping(address => address)   s2;
  constructor(uint184 i0)   {
    s0 %= uint184(0);
    s2[address(this)] = s2[address(this)];
    unchecked {
    }
  }
  receive() external virtual  payable
  {
  }
}
// ----
// TypeError 3417: (su0.sol:68-94): Internal or recursive type is not allowed as error parameter type.
